// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KModal matches snapshot 1`] = `undefined`;

exports[`KModal renders custom button text & appearance 1`] = `
<div aria-hidden="false" role="dialog" class="k-modal">
  <div class="k-modal-backdrop modal-backdrop">
    <div class="k-modal-dialog modal-dialog">
      <div class="k-modal-content modal-content">
        <div class="k-modal-header modal-header mb-5"></div>
        <!---->
        <div class="k-modal-body modal-body"></div>
        <div class="k-modal-footer modal-footer d-flex"><button type="button" class="k-button medium rounded danger">
            click to cancel
          </button>
          <div class="k-modal-action-buttons"><button type="button" class="k-button medium rounded outline">
              click to continue
            </button></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KModal renders proper content when using action-buttons slot 1`] = `
<div aria-hidden="false" role="dialog" class="k-modal">
  <div class="k-modal-backdrop modal-backdrop">
    <div class="k-modal-dialog modal-dialog">
      <div class="k-modal-content modal-content">
        <div class="k-modal-header modal-header mb-5"></div>
        <!---->
        <div class="k-modal-body modal-body"></div>
        <div class="k-modal-footer modal-footer d-flex"><button type="button" class="k-button medium rounded outline">
            Cancel
          </button>
          <div class="k-modal-action-buttons">
            <div>This is some action buttons text</div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KModal renders proper content when using props 1`] = `
<div aria-hidden="false" role="dialog" class="k-modal">
  <div class="k-modal-backdrop modal-backdrop">
    <div class="k-modal-dialog modal-dialog">
      <div class="k-modal-content modal-content">
        <div class="k-modal-header modal-header mb-4">Sweet prop title</div>
        <div class="k-modal-help modal-help">Sweet prop help text</div>
        <div class="k-modal-body modal-body">Sweet prop content</div>
        <div class="k-modal-footer modal-footer d-flex"><button type="button" class="k-button medium rounded outline">
            Cancel
          </button>
          <div class="k-modal-action-buttons"><button type="button" class="k-button medium rounded primary">
              Submit
            </button></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KModal renders proper content when using slots 1`] = `
<div aria-hidden="false" role="dialog" class="k-modal">
  <div class="k-modal-backdrop modal-backdrop">
    <div class="k-modal-dialog modal-dialog">
      <div class="k-modal-content modal-content">
        <div class="k-modal-header modal-header mb-4">
          <div>This is some header text</div>
        </div>
        <div class="k-modal-help modal-help">
          <div>This is some help text</div>
        </div>
        <div class="k-modal-body modal-body">
          <div>This is some body text</div>
        </div>
        <div class="k-modal-footer modal-footer d-flex">
          <div>This is some footer text</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
